Implement workshop board frontend
